--- a/ConsoleApplication1/ConsoleApplication1.csproj
+++ b/ConsoleApplication1/ConsoleApplication1.csproj
@@ -43,10 +43,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Simulation.cs" />
-    <Compile Include="Classes\Modules.cs" />
-    <Compile Include="Classes\IOClasses.cs" />
+    <Compile Include="Analysis.cs" />
+    <Compile Include="main.cs" />
+    <Compile Include="Preprocessing\Rainfall.cs" />
+    <Compile Include="Preprocessing\InputMod.cs" />
+    <Compile Include="Simulation\Simulation.cs" />
+    <Compile Include="Classes\ClassModules.cs" />
+    <Compile Include="Classes\IO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Preprocessing\Validation.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
