--- a/ConsoleApplication1/ConsoleApplication1.csproj
+++ b/ConsoleApplication1/ConsoleApplication1.csproj
@@ -33,6 +33,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Solver.Foundation, Version=3.0.2.10889, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.0\Microsoft.Solver.Foundation.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -48,6 +52,7 @@
     <Compile Include="main.cs" />
     <Compile Include="Preprocessing\Rainfall.cs" />
     <Compile Include="Preprocessing\HSGAve.cs" />
+    <Compile Include="SampleInputs\SampleInputParams.cs" />
     <Compile Include="Simulation\Analysis.cs" />
     <Compile Include="Classes\ClassModules.cs" />
     <Compile Include="Classes\IO.cs" />
@@ -64,7 +69,12 @@
     <Folder Include="ClientBin\NZP\" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="SampleInputs\SMOTInput.xml" />
+    <Content Include="SampleInputs\SMOTInput.xml">
+      <SubType>Designer</SubType>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
