--- a/ConsoleApplication1/ConsoleApplication1.csproj
+++ b/ConsoleApplication1/ConsoleApplication1.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EPPlus">
+      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.0\EPPlus.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.Solver.Foundation, Version=3.0.2.10889, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.0\Microsoft.Solver.Foundation.dll</HintPath>
@@ -59,14 +62,17 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Preprocessing\Validation.cs" />
     <Compile Include="Simulation\Simulation.cs" />
+    <Compile Include="Simulation\Solver.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="InputFiles\RainfallData.csv" />
     <None Include="SampleInputs\RainfallData.csv" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="ClientBin\NZP\" />
+    <Folder Include="Classes\ClientBin\NZP\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="SampleInputs\SMOTInput.xml">
